--- a/StudyDictionary/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/StudyDictionary/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2182" systemVersion="11E53" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="4">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2549" systemVersion="11E53" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="4">
     <dependencies>
-        <deployment defaultVersion="1296" identifier="iOS"/>
-        <development defaultVersion="4200" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1181"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1498"/>
     </dependencies>
     <scenes>
         <!--Tab Bar Controller-->
@@ -22,10 +20,12 @@
                     <connections>
                         <segue destination="rwi-eO-94j" kind="relationship" relationship="viewControllers" id="26"/>
                         <segue destination="3nj-oU-0pI" kind="relationship" relationship="viewControllers" id="27"/>
+                        <segue destination="omM-yL-HtU" kind="relationship" relationship="viewControllers" id="WDE-OM-fra"/>
+                        <segue destination="6X2-Fu-9u3" kind="relationship" relationship="viewControllers" id="pOB-R3-IsV"/>
                     </connections>
                 </tabBarController>
             </objects>
-            <point key="canvasLocation" x="132" y="180"/>
+            <point key="canvasLocation" x="78" y="864"/>
         </scene>
         <!--Navigation Controller - Dictionary-->
         <scene sceneID="Bci-jb-BRZ">
@@ -63,8 +63,12 @@
                                     <outlet property="delegate" destination="BxF-ZO-0eR" id="pUd-Pw-gbo"/>
                                 </connections>
                             </searchBar>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="lined-paper.png" id="Com-cW-z7h">
+                                <rect key="frame" x="0.0" y="44" width="320" height="323"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Study Dictionary" id="ZLt-gZ-eRZ">
                         <barButtonItem key="backBarButtonItem" title="Search" id="SW2-Bk-TrZ"/>
@@ -98,12 +102,11 @@
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" id="tRV-b4-Lfh">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="367"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="tJj-2t-eeW">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="N6F-ty-J2d">
@@ -137,6 +140,84 @@
                 </navigationController>
             </objects>
             <point key="canvasLocation" x="653" y="498"/>
+        </scene>
+        <!--Flash Card View Controller-->
+        <scene sceneID="QBj-6e-LWO">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dq1-eN-r3s" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="Fx9-I6-WSM" customClass="FlashCardViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ev9-FG-Ncr">
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <gestureRecognizers/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="Rpc-79-58T" appends="YES" id="XcB-Jq-UeI"/>
+                        </connections>
+                    </view>
+                    <navigationItem key="navigationItem" id="mFq-yc-N1T">
+                        <barButtonItem key="rightBarButtonItem" title="Select Flash Cards Set" id="oqM-SW-yoX">
+                            <connections>
+                                <segue destination="jxo-XW-sBR" kind="modal" identifier="FlashCardsSelect" id="Ie8-jB-C22"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tapRecognizer" destination="Rpc-79-58T" id="DBu-Lf-EFQ"/>
+                    </connections>
+                </viewController>
+                <tapGestureRecognizer id="Rpc-79-58T">
+                    <connections>
+                        <action selector="handleTapFrom:" destination="Fx9-I6-WSM" id="vT6-iu-MWV"/>
+                        <outlet property="delegate" destination="Fx9-I6-WSM" id="W6v-dQ-wrX"/>
+                    </connections>
+                </tapGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="1197" y="1140"/>
+        </scene>
+        <!--Flash Card Select View Controller - Select Flash Cards Set-->
+        <scene sceneID="3Uw-4W-jWD">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nAF-An-w4s" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tableViewController id="kOO-pH-78v" customClass="FlashCardSelectViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="opF-ED-21A">
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="FlashCardCell" id="PZ9-To-eez">
+                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="kOO-pH-78v" id="oWa-vI-EGM"/>
+                            <outlet property="delegate" destination="kOO-pH-78v" id="Lwb-Jj-Cuj"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Select Flash Cards Set" id="CQ7-kp-pEA"/>
+                </tableViewController>
+            </objects>
+            <point key="canvasLocation" x="2211" y="1140"/>
+        </scene>
+        <!--View Controller - Info-->
+        <scene sceneID="5bf-oy-Mze">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="z5w-Iz-kab" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="6X2-Fu-9u3" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2x3-rV-aVc">
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Info" image="info.png" id="KjU-39-s03"/>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="653" y="1773"/>
         </scene>
         <!--List View Controller - Word Lists-->
         <scene sceneID="ovs-7N-wye">
@@ -274,9 +355,50 @@
             </objects>
             <point key="canvasLocation" x="2785" y="-138"/>
         </scene>
+        <!--Navigation Controller - Flash Cards-->
+        <scene sceneID="iIM-GD-Ob9">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mBL-Tz-ub3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController id="omM-yL-HtU" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Flash Cards" image="flashcards.png" id="lCC-Ox-BhD"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="blackOpaque" id="Kix-BT-S2A">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Fx9-I6-WSM" kind="relationship" relationship="rootViewController" id="5vN-yn-uCq"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="653" y="1140"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="NVh-fU-7IJ">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="a92-Bc-DK0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController id="jxo-XW-sBR" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="blackOpaque" prompted="NO"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="blackOpaque" id="le5-hL-HzU">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="kOO-pH-78v" kind="relationship" relationship="rootViewController" id="f2D-mb-CmZ"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="1685" y="1140"/>
+        </scene>
     </scenes>
     <resources>
         <image name="book.png" width="18" height="26"/>
+        <image name="flashcards.png" width="24" height="22"/>
+        <image name="info.png" width="28" height="28"/>
+        <image name="lined-paper.png" width="320" height="323"/>
         <image name="notepad.png" width="22" height="28"/>
     </resources>
     <classes>
@@ -287,6 +409,16 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/EditableTableViewCell.h"/>
             <relationships>
                 <relationship kind="outlet" name="textField" candidateClass="UITextField"/>
+            </relationships>
+        </class>
+        <class className="FlashCardSelectViewController" superclassName="ListTemplateViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/FlashCardSelectViewController.h"/>
+        </class>
+        <class className="FlashCardViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/FlashCardViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="handleTapFrom:" candidateClass="UITapGestureRecognizer"/>
+                <relationship kind="outlet" name="tapRecognizer" candidateClass="UITapGestureRecognizer"/>
             </relationships>
         </class>
         <class className="ListContentsViewController" superclassName="UITableViewController">
