--- a/StudyDictionary/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/StudyDictionary/en.lproj/MainStoryboard_iPhone.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2549" systemVersion="11E53" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="4">
     <dependencies>
+        <deployment defaultVersion="1296" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1498"/>
     </dependencies>
     <scenes>
@@ -21,7 +22,7 @@
                         <segue destination="rwi-eO-94j" kind="relationship" relationship="viewControllers" id="26"/>
                         <segue destination="3nj-oU-0pI" kind="relationship" relationship="viewControllers" id="27"/>
                         <segue destination="omM-yL-HtU" kind="relationship" relationship="viewControllers" id="WDE-OM-fra"/>
-                        <segue destination="6X2-Fu-9u3" kind="relationship" relationship="viewControllers" id="pOB-R3-IsV"/>
+                        <segue destination="gjP-gk-0sO" kind="relationship" relationship="viewControllers" id="DmR-7f-Edn"/>
                     </connections>
                 </tabBarController>
             </objects>
@@ -55,6 +56,11 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="367"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="JrZ-rG-y3v">
+                                <rect key="frame" x="0.0" y="44" width="320" height="323"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
                             <searchBar contentMode="redraw" barStyle="blackOpaque" placeholder="Search" id="uuV-xe-hCj">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
@@ -63,10 +69,6 @@
                                     <outlet property="delegate" destination="BxF-ZO-0eR" id="pUd-Pw-gbo"/>
                                 </connections>
                             </searchBar>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="lined-paper.png" id="Com-cW-z7h">
-                                <rect key="frame" x="0.0" y="44" width="320" height="323"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
@@ -172,7 +174,86 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="1197" y="1140"/>
+            <point key="canvasLocation" x="1183" y="1140"/>
+        </scene>
+        <!--Contact View Controller - Contact-->
+        <scene sceneID="5qx-Yx-Ipa">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fb4-m3-w3k" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tableViewController id="b2T-su-SFC" customClass="ContactViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="static" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="XT6-4Q-EPR">
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <sections>
+                            <tableViewSection id="Z8P-cT-0sY">
+                                <cells>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ContactWebsiteCell" id="1lx-O7-egx">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Website" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="XL7-7p-QLb">
+                                                    <rect key="frame" x="10" y="0.0" width="300" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ContactEmailCell" id="pYH-0n-uue">
+                                        <rect key="frame" x="0.0" y="44" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Email" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="ggG-AR-cVN">
+                                                    <rect key="frame" x="10" y="0.0" width="300" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ContactTwitterCell" id="Cq6-S3-Fhk">
+                                        <rect key="frame" x="0.0" y="88" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Twitter" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" id="aWp-ia-Gn5">
+                                                    <rect key="frame" x="10" y="0.0" width="300" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="b2T-su-SFC" id="0jP-UV-00M"/>
+                            <outlet property="delegate" destination="b2T-su-SFC" id="b2x-1t-2hS"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Contact" id="Yzl-bR-ZL0"/>
+                </tableViewController>
+            </objects>
+            <point key="canvasLocation" x="1183" y="1809"/>
         </scene>
         <!--Flash Card Select View Controller - Select Flash Cards Set-->
         <scene sceneID="3Uw-4W-jWD">
@@ -204,21 +285,6 @@
             </objects>
             <point key="canvasLocation" x="2211" y="1140"/>
         </scene>
-        <!--View Controller - Info-->
-        <scene sceneID="5bf-oy-Mze">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="z5w-Iz-kab" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <viewController id="6X2-Fu-9u3" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="2x3-rV-aVc">
-                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Info" image="info.png" id="KjU-39-s03"/>
-                </viewController>
-            </objects>
-            <point key="canvasLocation" x="653" y="1773"/>
-        </scene>
         <!--List View Controller - Word Lists-->
         <scene sceneID="ovs-7N-wye">
             <objects>
@@ -237,7 +303,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="New List" minimumFontSize="17" id="47g-Wx-Y0I">
-                                            <rect key="frame" x="10" y="0.0" width="301" height="43"/>
+                                            <rect key="frame" x="10.5" y="0.0" width="300" height="43"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                             <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="done"/>
@@ -323,7 +389,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="New List" minimumFontSize="17" id="iZz-gb-UWa">
-                                            <rect key="frame" x="10" y="0.0" width="301" height="43"/>
+                                            <rect key="frame" x="10.5" y="0.0" width="300" height="43"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                             <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="done"/>
@@ -393,15 +459,36 @@
             </objects>
             <point key="canvasLocation" x="1685" y="1140"/>
         </scene>
+        <!--Navigation Controller - Contact-->
+        <scene sceneID="f8H-Q7-Uz5">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6uO-tV-cPJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController id="gjP-gk-0sO" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Contact" image="contact.png" id="ozv-py-VMI"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" barStyle="blackOpaque" id="S67-fb-36O">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="b2T-su-SFC" kind="relationship" relationship="rootViewController" id="kux-YC-MfK"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="653" y="1809"/>
+        </scene>
     </scenes>
     <resources>
         <image name="book.png" width="18" height="26"/>
+        <image name="contact.png" width="24" height="24"/>
         <image name="flashcards.png" width="24" height="22"/>
-        <image name="info.png" width="28" height="28"/>
-        <image name="lined-paper.png" width="320" height="323"/>
         <image name="notepad.png" width="22" height="28"/>
     </resources>
     <classes>
+        <class className="ContactViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ContactViewController.h"/>
+        </class>
         <class className="DictionarySearchViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/DictionarySearchViewController.h"/>
         </class>
@@ -446,6 +533,6 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="v2u-dC-YML"/>
+        <segue reference="MYq-GN-VNe"/>
     </inferredMetricsTieBreakers>
 </document>
